vault-secret-uploader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-secret-uploader
  namespace: permedcoe
spec:
  selector:
    matchLabels:
      app: vault-secret-uploader
  replicas: 1
  template:
    metadata:
      labels:
        app: vault-secret-uploader
    spec:
      containers:
      - image: atosariapclab/vault-secret-uploader
        name: vault-secret-uploader
        ports:
        - containerPort: 8202
          protocol: TCP
