vault-secret-uploader/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: vault-secret-uploader
spec:
  ports:
  - name: vault-secret-uploader
    port: 80 
    protocol: TCP
    targetPort: 8202
  selector:
    app: vault-secret-uploader
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
