vault-secret-uploader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: content-type, Authorization, Tenant
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST, OPTIONS
    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: vault-secret-uploader
spec:
  rules:
  - host: vault-secret-uploader.grapevine-project.eu
    http:
      paths:
      - backend:
          service:
            name: vault-secret-uploader
            port: 80
        path: /
  tls:
  - hosts:
    - vault-secret-uploader.grapevine-project.eu
    secretName: vault-secret-uploader.grapevine-project.eu
